--- a/Pneumonia Detection from Chest X-Ray Images using PyTorch.ipynb
+++ b/Pneumonia Detection from Chest X-Ray Images using PyTorch.ipynb
@@ -16,11 +16,40 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "rRp0zY0gH-_l"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6OsB4D8gLovm",
+        "outputId": "b1081491-0a27-450d-826d-183575310114"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
+            "Your Kaggle username: namansingla1001\n",
+            "Your Kaggle Key: ··········\n",
+            "Downloading chest-xray-pneumonia.zip to ./chest-xray-pneumonia\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 2.29G/2.29G [00:23<00:00, 103MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install opendatasets --upgrade --quiet\n",
         "import opendatasets as od\n",
@@ -31,9 +60,9 @@
         "import torchvision.transforms as transforms\n",
         "from torch.utils.data import DataLoader, Dataset\n",
         "from torchvision.datasets import ImageFolder\n",
-        "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+        "#from kaggle.api.kaggle_api_extended import KaggleApi\n",
         "dataset_url='https://www.kaggle.com/datasets/paultimothymooney/chest-xray-pneumonia'\n",
-        "od.download(dataset_url)\n"
+        "od.download(dataset_url)"
       ]
     },
     {
@@ -77,7 +106,7 @@
         "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
         "        self.relu = nn.ReLU()\n",
         "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-        "        self.fc1 = nn.Linear(16 * 128 * 128, 64)  # Adjust the input size depending on your image size\n",
+        "        self.fc1 = nn.Linear(16 * 128 * 128, 64)  # Adjust the input size\n",
         "        self.fc2 = nn.Linear(64, 2)  # 2 output classes: Normal and Pneumonia\n",
         "\n",
         "    def forward(self, x):\n",
@@ -92,7 +121,7 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
-        "# Step 11: Training loop\n",
+        "# Training loop\n",
         "num_epochs = 10\n",
         "for epoch in range(num_epochs):\n",
         "    model.train()\n",
@@ -104,7 +133,7 @@
         "        optimizer.step()\n",
         "    print(f\"Epoch [{epoch + 1}/{num_epochs}] - Loss: {loss.item():.4f}\")\n",
         "\n",
-        "# Step 12: Evaluation on validation set\n",
+        "# Evaluation on validation set\n",
         "model.eval()\n",
         "correct = 0\n",
         "total = 0\n",
@@ -118,7 +147,7 @@
         "accuracy = 100 * correct / total\n",
         "print(f\"Validation Accuracy: {accuracy:.2f}%\")\n",
         "\n",
-        "# Step 13: Evaluation on test set\n",
+        "# Evaluation on test set\n",
         "model.eval()\n",
         "correct = 0\n",
         "total = 0\n",
@@ -130,19 +159,42 @@
         "        correct += (predicted == labels).sum().item()\n",
         "\n",
         "accuracy = 100 * correct / total\n",
-        "print(f\"Test Accuracy: {accuracy:.2f}%\")"
+        "print(f\"Test Accuracy: {accuracy:.2f}%\")\n"
       ],
       "metadata": {
-        "id": "h-akuv5nIMOi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8YVu08utLus2",
+        "outputId": "d8146628-f6d3-4e52-eacf-e077f5ede86e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/10] - Loss: 0.1064\n",
+            "Epoch [2/10] - Loss: 0.0570\n",
+            "Epoch [3/10] - Loss: 0.0450\n",
+            "Epoch [4/10] - Loss: 0.0627\n",
+            "Epoch [5/10] - Loss: 0.0210\n",
+            "Epoch [6/10] - Loss: 0.0086\n",
+            "Epoch [7/10] - Loss: 0.0323\n",
+            "Epoch [8/10] - Loss: 0.0138\n",
+            "Epoch [9/10] - Loss: 0.0069\n",
+            "Epoch [10/10] - Loss: 0.0074\n",
+            "Validation Accuracy: 93.75%\n",
+            "Test Accuracy: 76.60%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "2DkvIIN6KACM"
+        "id": "aJi_m2fCNVyE"
       },
       "execution_count": null,
       "outputs": []
